Fix footer on mobile
Change-Id: I61cde3b18581dc5ae5f15430364453c71c85013d

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -363,4 +363,12 @@ blockquote {
 	.story table {
 		width: 90%;
 	}
+
+	footer {
+		font-size: 12px;
+
+		ul li {
+			margin-left: 38px;
+		}
+	}
 }
