Add data and fix visualization for bubble graph
Change-Id: I359d7129851973112684cdc1df1d9f1a271025ed

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -104,16 +104,11 @@
 	<div class="analytics">
 		<h2>Compared to other companies, we received relatively few requests.</h2>
 		<ul class="tabs">
-			<li><a href="#">All</a></li>
-			<li><a href="#">July 2012 - June 2013</a></li>
-			<li><a href="#">July - December 2013</a></li>
-			<li><a href="#">January - June 2014</a></li>
+			<li><a href="javascript: void(0);" class="bubble_time" id="bubble_all">All</a></li>
+			<li><a href="javascript: void(0);" class="bubble_time" id="bubble_12" >2012</a></li>
+			<li><a href="javascript: void(0);" class="bubble_time active" id="bubble_13" >2013</a></li>
 		</ul>
 		<div id="compare_graph" class="bubble_graph"></div>
-		<span id="complied_requests">
-			<input type="checkbox" id="complied_requests_check">
-			<label for="complied_requests_check">% of times information was produced</label>
-		</span><br>
 	</div>
 
 </div>
