Add legends for the bubble chart
Change-Id: Ifef3e92e619c32552d9dc2bfa674e474a167433b

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -109,6 +109,14 @@
 			<li><a href="javascript: void(0);" class="bubble_time active" id="bubble_13" >2013</a></li>
 		</ul>
 		<div id="compare_graph" class="bubble_graph"></div>
+		<div class="legends">
+			<div>
+				<span class="total_requests_circle"></span><p>Total Requests</p>
+			</div>
+			<div>
+				<span class="complied_requests_circle"></span><p>Requests where information was produced</p>
+			</div>
+		</div>
 	</div>
 
 </div>
