User Data table formating and style
Change-Id: Ibcd6e573edf37ba59fc8385ec8ba2bd087b748c7

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -57,35 +57,35 @@
 				<td>56</td>
 			</tr>
 			<tr>
-				<td>Information Produced For</td>
+				<td class="indent">Information Produced</td>
 				<td>8</td>
 			</tr>
 			<tr>
-				<td>Informal Non-Government Requests</td>
+				<td class="indent">Informal Non-Government Requests</td>
 				<td>28</td>
 			</tr>
 			<tr>
-				<td>Informal Government Requests</td>
+				<td class="indent">Informal Government Requests</td>
 				<td>15</td>
 			</tr>
 			<tr>
-				<td><a href="/faq#civil_subpoena">Civil Subpoenas</a></td>
+				<td class="indent"><a href="/faq#civil_subpoena">Civil Subpoenas</a></td>
 				<td>8</td>
 			</tr>
 			<tr>
-				<td><a href="/faq#criminal_subpoena">Criminal Subpoenas</a></td>
+				<td class="indent"><a href="/faq#criminal_subpoena">Criminal Subpoenas</a></td>
 				<td>5</td>
 			</tr>
 			<tr>
-				<td>Administrative Subpoenas</td>
+				<td class="indent">Administrative Subpoenas</td>
 				<td>0</td>
 			</tr>
 			<tr>
-				<td>Search Warrants</td>
+				<td class="indent">Search Warrants</td>
 				<td>0</td>
 			</tr>
-			<tr>
-				<td>Court Orders</td>
+			<tr class="last">
+				<td class="indent">Court Orders</td>
 				<td>0</td>
 			</tr>
 			<tr>
