Set up localization and homepage
Change-Id: I3ac807d06c5972fcd9b501e8da29bba45da7fef6

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,9 +32,9 @@
 					</div>
 					<div id="navbar-collapse" class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li><%= navigation_link( 'User Data', 'privacy' ) %></li>
-							<li><%= navigation_link( 'Content', '/content' ) %></li>
-							<li><%= navigation_link( 'FAQ', '/faq' ) %></li>
+							<li><%= navigation_link( 'User Data', '/privacy.html' ) %></li>
+							<li><%= navigation_link( 'Content', '/content.html' ) %></li>
+							<li><%= navigation_link( 'FAQ', '/faq.html' ) %></li>
 						</ul>
 					</div>
 				</nav>
