--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,15 +26,15 @@
 						<a class="navbar-brand" href="/">
 							<img src="/images/logo.png" />
 							<% if request.path != 'index.html'  %>
-								Wikimedia Foundation Transparency Report
+								<%= t('menu.title') %>
 							<% end %>
 						</a>
 					</div>
 					<div id="navbar-collapse" class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li><%= navigation_link( 'User Data', '/privacy.html' ) %></li>
-							<li><%= navigation_link( 'Content', '/content.html' ) %></li>
-							<li><%= navigation_link( 'FAQ', '/faq.html' ) %></li>
+							<li><%= navigation_link( t('menu.privacy'), '/privacy.html' ) %></li>
+							<li><%= navigation_link( t('menu.content'), '/content.html' ) %></li>
+							<li><%= navigation_link( t('menu.faq'), '/faq.html' ) %></li>
 						</ul>
 					</div>
 				</nav>
@@ -46,30 +46,30 @@
 				<div class="col-md-5">
 					<a href="/">
 						<img src="/images/logo.png">
-						Wikimedia Foundation Transparency Report
+						<%= t('menu.title') %>
 					</a>
 				</div>
 
 				<div class="col-md-2">
 					<ul>
-						<li><a href="#">User Data</a></li>
-						<li><a href="#">Content</a></li>
-						<li><a href="#">FAQ</a></li>
+						<li><a href="#"><%= t('menu.privacy') %></a></li>
+						<li><a href="#"><%= t('menu.content') %></a></li>
+						<li><a href="#"><%= t('menu.faq') %></a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-2">
 					<ul>
-						<li><a href="http://wikimediafoundation.org/wiki/Privacy_policy">Privacy Policy</a></li>
-						<li><a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines">Data Retention Guidelines</a></li>
-						<li><a href="http://wikimediafoundation.org/wiki/Terms_of_Use">Terms of Use</a></li>
+						<li><a href="http://wikimediafoundation.org/wiki/Privacy_policy"><%= t('menu.privacy_policy') %></a></li>
+						<li><a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines"><%= t('menu.data_retention_guidelines') %></a></li>
+						<li><a href="http://wikimediafoundation.org/wiki/Terms_of_Use"><%= t('menu.tou') %></a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-2">
 					<ul>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Blog</a></li>
+						<li><a href="#"><%= t('menu.about_us') %></a></li>
+						<li><a href="#"><%= t('menu.blog') %></a></li>
 					</ul>
 				</div>
 
