Change Content page icon on index
Change-Id: I3181c139d950d61d5df3458af3eb7198a00ef5b7

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -322,6 +322,7 @@ blockquote {
 			line-height: 160px;
 			color: $blue;
 			text-align: center;
+			letter-spacing: -3.5px;
 
 			small {
 				font-size: 40px;
