Fix big button links on index.
Change-Id: I07d3088844724b7b6035f057a285ddac9e843d1f

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -25,17 +25,17 @@
 
 <div class="col-md-4">
 	<a href="content/" class="story bignav">
-		<h3><%= t('content') %></h3>
+		<h3><%= t('home.content') %></h3>
 		<hr/>
 		<p>
-			<img class="icon" src="/images/content.svg">
+			<img class="icon" src="/images/content1.svg">
 		</p>
 	</a>
 </div>
 
 <div class="col-md-4">
 	<a href="faq/" class="story bignav">
-		<h3><%= t('faq') %></h3>
+		<h3><%= t('home.faq') %></h3>
 		<hr/>
 		<p>
 			<img class="icon" src="/images/faq.svg">
