Add retina and non retina images for stories
Change-Id: I504f22ec815a2f126ffe8b4efaa6ef6709be3c0f

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -52,22 +52,22 @@
 
 <div class="col-md-4">
   <div class="story">
+    <img src="/images/story_dcri.png">
     <h3>
       French Intelligence Agency<br>
       <small>March 2013</small>
     </h3>
-    <hr />
     <p>A <a href="https://en.wikipedia.org/wiki/Direction_centrale_du_renseignement_int%C3%A9rieur">French intelligence agency</a> summoned a Wikipedia user to its offices, and threatened him with severe criminal penalties if he did not use his administrative rights to delete information about a <a href="https://fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute">military base</a> from <a href="https://fr.wikipedia.org/">French Wikipedia</a> that the agency deemed classified. The supposedly classified information was actually publicly available because the military had provided interviews and a tour of the base to local reporters. We defended the user involved and fought to keep the content up on Wikipedia. <a href="https://meta.wikimedia.org/wiki/Legal_and_Community_Advocacy/Statement_on_France">Read more...</a></p>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="story">
+    <img src="/images/story_monkey.png">
     <h3>
       Monkey Selfie<br>
       <small>January 2014</small>
     </h3>
-    <hr />
     <p>A photographer left his camera unattended in a national park in <a href="https://en.wikipedia.org/wiki/North_Sulawesi">North Sulawesi</a>, <a href="https://en.wikipedia.org/wiki/Indonesia">Indonesia</a>. A female <a href="https://en.wikipedia.org/wiki/Celebes_crested_macaque">crested black macaque monkey</a> got ahold of the camera and took a series of pictures, including some self-portraits. The pictures were featured in an online newspaper article and eventually posted to <a href="https://commons.wikimedia.org/">Commons</a>. We received a takedown request from the photographer, claiming that he owned the copyright to the photographs. We didn't agree, so we denied the request.</p>
   </div>
 </div>
@@ -82,6 +82,9 @@
     <p>A Tasmanian aboriginal language center demanded the removal of the <a href="https://en.wikipedia.org/wiki/Palawa_kani">English Wikipedia article on "palawa kani"</a>, claiming copyright over the entirety of the language. We refused to remove the article because copyright law simply cannot be used to stop people from using an entire language or to prevent general discussion about the language. Such a broad claim would have chilled free speech and negatively impacted research, education, and public discourse—activities that Wikimedia serves to promote.</p>
   </div>
 </div>
+
+<div class="clear"></div>
+<br /> <br /> <br /> <br /> <br />
 
 <div class="col-md-3">
   <section class="scorecard">
@@ -123,18 +126,18 @@
 
 <div class="col-md-4">
   <div class="story">
+    <img src="/images/story_ruth.png">
     <h3>
       Babe Ruth's Called Shot<br>
       <small>March 2014</small>
     </h3>
-    <hr />
     <p>A film shot by Matt Kandle at the <a href="https://en.wikipedia.org/wiki/1932_World_Series">1932 World Series</a> provides evidence of <a href="https://en.wikipedia.org/wiki/Babe_Ruth">Babe Ruth's</a> famous “<a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot">called shot</a>,” in which he gestured to center field before hitting a home run to the same location. The copyright owner sent us a DMCA takedown request regarding a <a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg">still image</a> from the film used on <a href="https://en.wikipedia.org">English Wikipedia</a>. We declined to remove the image on the basis of <a href="https://en.wikipedia.org/wiki/Fair_use">fair use</a>, citing its extraordinary value in illustrating the famous moment and the educational purpose it serves.</p>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="story">
-    <img src="/images/story_aboriginal.png">
+    <img src="/images/story_obama.png">
     <h3>
       Obama &amp; Mandela Meet<br>
       <small>December 2013</small>
@@ -145,11 +148,11 @@
 
 <div class="col-md-4">
   <div class="story">
+    <img src="/images/story_classics.png">
     <h3>
       The Classics<br>
       <small>November 2013</small>
     </h3>
-    <hr />
     <p>A publishing company sent us a takedown request concerning four famous works on <a href="https://wikisource.org/">Wikisource</a>: French translations of <a href="https://en.wikipedia.org/wiki/Jane_Austen">Jane Austen's</a> <a href="http://fr.wikisource.org/wiki/Les_Cinq_Filles_de_Mrs_Bennet"><em>Pride and Prejudice</em></a> and <a href="http://fr.wikisource.org/wiki/Persuasion"><em>Persuasion</em></a>, a French translation <a href="https://en.wikipedia.org/wiki/Arthur_Conan_Doyle">Arthur Conan Doyle's</a> <a href="https://fr.wikisource.org/wiki/Les_Aventures_de_Sherlock_Holmes"><em>The Adventures of Sherlock Holmes</em></a>, and <a href="https://en.wikipedia.org/wiki/Jean_de_la_Fontaine">Jean de la Fontaine’s</a> <a href="http://fr.wikisource.org/wiki/Fables_de_La_Fontaine,_livres_I-III"><em>Fables</em></a>. We immediately noticed the peculiarity with the request: all four original works (and likely their French translations as well) were old enough to have fallen into the <a href="https://en.wikipedia.org/wiki/Public_domain">public domain</a>. When we alerted the company to this point, it rescinded the takedown notice.</p>
   </div>
 </div>
