--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -44,7 +44,7 @@
 
 			<footer>
 				<div class="col-md-5">
-					<a href="/">
+					<a class="brand" href="/">
 						<img src="/images/logo.png">
 						<%= t('menu.title') %>
 					</a>
