--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -34,6 +34,18 @@ h2 {
 	}
 }
 
+footer {
+	.brand {
+		display: block;
+		color: $black;
+		margin-bottom: 24px;
+	}
+	ul {
+		margin-bottom: 24px;
+	}
+	line-height: 1.4;
+}
+
 .navbar-default {
 	background: transparent;
 	border: none;
@@ -42,8 +54,8 @@ h2 {
 
 	.navbar-nav > li > a {
 		color: $black;
-		border-bottom: 2px solid $lightgray;
-		border-color: $lightgray;
+		border-bottom: 3px solid $lightgray;
+		border-color: $gray;
 		margin-left: 10px;
 		font-size: 16px;
 		padding: 16px 0 18px 0;
@@ -60,6 +72,11 @@ h2 {
 
 		> img {
 			width: 30px;
+			height: 30px;
+		}
+
+		&:hover {
+			color: #333;
 		}
 	}
 }
@@ -118,6 +135,7 @@ footer {
 
 	img {
 		width: 30px;
+		height: 30px;
 		margin-right: 5px;
 	}
 
@@ -126,7 +144,8 @@ footer {
 		padding: 0;
 
 		li {
-			margin-bottom: 10px;
+			margin-bottom: 14px;
+			margin-top:3px;
 		}
 	}
 }
@@ -143,7 +162,7 @@ footer {
 
 	img {
 		width: 100%;
-
+		height: 100%;
 	}
 
 	hr {
@@ -334,19 +353,31 @@ blockquote {
 
 @media (max-width: 768px){
 	.navbar-default .navbar-brand {
-		font-size: 10px;
+		font-size: 14px;
+
+		> img {
+			width: 20px;
+			height: 20px
+		}
 	}
 
-	.container .jumbotron .mainheading{
-		font-size: 35px;
-		line-height: 50px;
+	.navbar-default .navbar-toggle {
+		border-color: $gray;
+		border-radius: 1px;
+		padding: 7px 9px;
+		margin-top: 10px;
+
+		.icon-bar {
+			background-color: $gray;
+		}
 	}
 
 	.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a {
 		border-bottom: none;
-		border-left-width: 2px;
+		border-left-width: 3px;
 		border-left-style: solid;
 		padding-left: 10px;
+		margin-bottom: 2px;
 	}
 
 	blockquote {
@@ -359,20 +390,6 @@ blockquote {
 			margin: 0;
 			margin-left: 40px;
 		}
-
-		footer {
-			img {
-				margin-left: 40px;
-			}
-
-			p {
-				margin-left: 130px;
-			}
-		}
-	}
-
-	p.lead {
-		font-size: 20px;
 	}
 
 	.story, .scorecard {
@@ -385,10 +402,15 @@ blockquote {
 	}
 
 	footer {
-		font-size: 12px;
+		font-size: 14px;
+
+		img {
+				width: 20px;
+				height: 20px;
+			}
 
 		ul li {
-			margin-left: 38px;
+			margin-left: 30px;
 		}
 	}
 }
