improvements with mobile view
Change-Id: I5bec98d28d4d9e34658783eda50d2fc60187c067

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,7 +26,7 @@
 						<a class="navbar-brand" href="/">
 							<img src="/images/logo.png" />
 							<% if request.path != 'index.html'  %>
-								<%= t('menu.title') %>
+								<span class="name"><%= t('menu.title') %></span>
 							<% end %>
 						</a>
 					</div>
