Fix styling for FAQ page
Change-Id: I38efdde137e48321483f1d50fa6fe5ecf7f8a035

--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -6,103 +6,147 @@
 	</h1>
 </div>
 
-<div class="col-md-3"></div>
-
-<div class="col-md-9">
+<div class="col-md-12">
 	<a name="information"></a>
-	<h2 class="faq"><%= t('faq.q_information') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_information') %></span></h2>
 	<div class="answer"><%= t('faq.a_information') %></div>
 
+	<hr>
+
 	<a name="standards"></a>
-	<h2 class="faq"><%= t('faq.q_standards') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_standards') %></span></h2>
 	<div class="answer"><%= t('faq.a_standards') %></div>
 
+	<hr>
+
 	<a name="request_abroad"></a>
-	<h2 class="faq"><%= t('faq.q_request_abroad') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_request_abroad') %></span></h2>
 	<div class="answer"><%= t('faq.a_request_abroad') %></div>
 
+	<hr>
+
 	<a name="nonpublic_personal_information"></a>
-	<h2 class="faq"><%= t('faq.q_nonpublic_personal_information') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_nonpublic_personal_information') %></span></h2>
 	<div class="answer"><%= t('faq.a_nonpublic_personal_information') %></div>
 
+	<hr>
+
 	<a name="my_personal_information"></a>
-	<h2 class="faq"><%= t('faq.q_my_personal_information') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_my_personal_information') %></span></h2>
 	<div class="answer"><%= t('faq.a_my_personal_information') %></div>
 
+	<hr>
+
 	<a name="civil_subpoena"></a>
-	<h2 class="faq"><%= t('faq.q_civil_subpoena') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_civil_subpoena') %></span></h2>
 	<div class="answer"><%= t('faq.a_civil_subpoena') %></div>
 
+	<hr>
+
 	<a name="criminal_subpoena"></a>
-	<h2 class="faq"><%= t('faq.q_criminal_subpoena') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_criminal_subpoena') %></span></h2>
 	<div class="answer"><%= t('faq.a_criminal_subpoena') %></div>
 
+	<hr>
+
 	<a name="search_warrant"></a>
-	<h2 class="faq"><%= t('faq.q_search_warrant') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_search_warrant') %></span></h2>
 	<div class="answer"><%= t('faq.a_search_warrant') %></div>
 
+	<hr>
+
 	<a name="court_order"></a>
-	<h2 class="faq"><%= t('faq.q_court_order') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_court_order') %></span></h2>
 	<div class="answer"><%= t('faq.a_court_order') %></div>
 
+	<hr>
+
 	<a name="possibly_actually_affected"></a>
-	<h2 class="faq"><%= t('faq.q_possibly_actually_affected') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_possibly_actually_affected') %></span></h2>
 	<div class="answer"><%= t('faq.a_possibly_actually_affected') %></div>
 
+	<hr>
+
 	<a name="potentially_affected"></a>
-	<h2 class="faq"><%= t('faq.q_potentially_affected') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_potentially_affected') %></span></h2>
 	<div class="answer"><%= t('faq.a_potentially_affected') %></div>
 
+	<hr>
+
 	<a name="actually_affected"></a>
-	<h2 class="faq"><%= t('faq.q_actually_affected') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_actually_affected') %></span></h2>
 	<div class="answer"><%= t('faq.a_acutally_affected') %></div>
 
+	<hr>
+
 	<a name="public_information_included"></a>
-	<h2 class="faq"><%= t('faq.q_public_information_included') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_public_information_included') %></span></h2>
 	<div class="answer"><%= t('faq.a_public_information_included') %></div>
 
+	<hr>
+
 	<a name="improve_laws"></a>
-	<h2 class="faq"><%= t('faq.q_improve_laws') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_improve_laws') %></span></h2>
 	<div class="answer"><%= t('faq.a_improve_laws') %></div>
 
+	<hr>
+
 	<a name="resolve_content_disputes"></a>
-	<h2 class="faq"><%= t('faq.q_resolve_content_disputes') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_resolve_content_disputes') %></span></h2>
 	<div class="answer"><%= t('faq.a_resolve_content_disputes') %></div>
 
+	<hr>
+
 	<a name="im_being_sued"></a>
-	<h2 class="faq"><%= t('faq.q_im_being_sued') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_im_being_sued') %></span></h2>
 	<div class="answer"><%= t('faq.a_im_being_sued') %></div>
 
+	<hr>
+
 	<a name="remove_content"></a>
-	<h2 class="faq"><%= t('faq.q_remove_content') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_remove_content') %></span></h2>
 	<div class="answer"><%= t('faq.a_remove_content') %></div>
 
+	<hr>
+
 	<a name="dmca_valid_proper"></a>
-	<h2 class="faq"><%= t('faq.q_dmca_valid_proper') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_dmca_valid_proper') %></span></h2>
 	<div class="answer"><%= t('faq.a_dmca_valid_proper') %></div>
 
+	<hr>
+
 	<a name="transparent_dmca"></a>
-	<h2 class="faq"><%= t('faq.q_transparent_dmca') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_transparent_dmca') %></span></h2>
 	<div class="answer"><%= t('faq.a_transparent_dmca') %></div>
 
+	<hr>
+
 	<a name="counter_notices"></a>
-	<h2 class="faq"><%= t('faq.q_counter_notices') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_counter_notices') %></span></h2>
 	<div class="answer"><%= t('faq.a_counter_notices') %></div>
 
+	<hr>
+
 	<a name="six_month"></a>
-	<h2 class="faq"><%= t('faq.q_six_month') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_six_month') %></span></h2>
 	<div class="answer"><%= t('faq.a_six_month') %></div>
 
+	<hr>
+
 	<a name="count_requests"></a>
-	<h2 class="faq"><%= t('faq.q_count_requests') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_count_requests') %></span></h2>
 	<div class="answer"><%= t('faq.a_count_requests') %></div>
 
+	<hr>
+
 	<a name="targeted_takedown"></a>
-	<h2 class="faq"><%= t('faq.q_targeted_takedown') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_targeted_takedown') %></span></h2>
 	<div class="answer"><%= t('faq.a_targeted_takedown') %></div>
 
+	<hr>
+
 	<a name="projects_affected"></a>
-	<h2 class="faq"><%= t('faq.q_projects_affected') %></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_projects_affected') %></span></h2>
 	<div class="answer"><%= t('faq.a_projects_affected') %></div>
 
 
