--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -88,13 +88,13 @@
 </div>
 
 <div class="col-md-8">
-  <h2>DMCA Takedown Notices</h2>
-  <%= t('dmca.intro') %>
+  <h2><%= t('content.dmca_title') %></h2>
+  <%= t('content.dmca_intro') %>
   <blockquote>
-    <p>A well-functioning copyright law carefully balances the interests of the public in access to expressive works and... the interests of copyright owners in being compensated for uses of their works.</p>
+    <p><%= t('content.quote2') %></p>
     <footer>
       <img src="/images/quote_samuelson.png">
-      <p>Pamela Samuelson<small>Director of Berkeley Center for Law &amp; Technology (2010)</small></p>
+      <p><%= t('content.cite2') %></p>
     </footer>
   </blockquote>
 </div>
@@ -103,10 +103,9 @@
   <div class="story">
     <img src="/images/story_ruth.png">
     <h3>
-      Babe Ruth's Called Shot<br>
-      <small>March 2014</small>
+      <%= t('content.s_t_babe_ruth') %>
     </h3>
-    <p>A film shot by Matt Kandle at the <a href="https://en.wikipedia.org/wiki/1932_World_Series">1932 World Series</a> provides evidence of <a href="https://en.wikipedia.org/wiki/Babe_Ruth">Babe Ruth's</a> famous “<a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot">called shot</a>,” in which he gestured to center field before hitting a home run to the same location. The copyright owner sent us a DMCA takedown request regarding a <a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg">still image</a> from the film used on <a href="https://en.wikipedia.org">English Wikipedia</a>. We declined to remove the image on the basis of <a href="https://en.wikipedia.org/wiki/Fair_use">fair use</a>, citing its extraordinary value in illustrating the famous moment and the educational purpose it serves.</p>
+    <%= t('content.s_s_babe_ruth') %>
   </div>
 </div>
 
@@ -114,10 +113,9 @@
   <div class="story">
     <img src="/images/story_obama.png">
     <h3>
-      Obama &amp; Mandela Meet<br>
-      <small>December 2013</small>
+      <%= t('content.s_t_obama') %>
     </h3>
-    <p>We received a takedown notice for a photo on <a href="https://commons.wikimedia.org/">Commons</a> of then-Senator <a href="https://en.wikipedia.org/wiki/Barack_Obama">Barack Obama’s</a> first meeting with <a href="https://en.wikipedia.org/wiki/Nelson_Mandela">Nelson Mandela</a>. Because the photographer David Katz was a federal employee at the time, the photo was believed to be in the <a href="https://en.wikipedia.org/wiki/Copyright_status_of_work_by_the_U.S._government">public domain</a>. Katz argued the photo was not taken as part of his “official duties” and thus not in the public domain. After an exhaustive factual investigation, we could not find sufficient evidence that photography was one of Katz’s official duties and therefore removed the image. <a href="https://commons.wikimedia.org/wiki/Commons:Village_pump/Archive/2013/12#Update_to_Obama-Mandela_DMCA_takedown">Read more...</a></p>
+      <%= t('content.s_s_obama') %>
   </div>
 </div>
 
@@ -125,10 +123,9 @@
   <div class="story">
     <img src="/images/story_classics.png">
     <h3>
-      The Classics<br>
-      <small>November 2013</small>
+      <%= t('content.s_t_classic') %>
     </h3>
-    <p>A publishing company sent us a takedown request concerning four famous works on <a href="https://wikisource.org/">Wikisource</a>: French translations of <a href="https://en.wikipedia.org/wiki/Jane_Austen">Jane Austen's</a> <a href="http://fr.wikisource.org/wiki/Les_Cinq_Filles_de_Mrs_Bennet"><em>Pride and Prejudice</em></a> and <a href="http://fr.wikisource.org/wiki/Persuasion"><em>Persuasion</em></a>, a French translation <a href="https://en.wikipedia.org/wiki/Arthur_Conan_Doyle">Arthur Conan Doyle's</a> <a href="https://fr.wikisource.org/wiki/Les_Aventures_de_Sherlock_Holmes"><em>The Adventures of Sherlock Holmes</em></a>, and <a href="https://en.wikipedia.org/wiki/Jean_de_la_Fontaine">Jean de la Fontaine’s</a> <a href="http://fr.wikisource.org/wiki/Fables_de_La_Fontaine,_livres_I-III"><em>Fables</em></a>. We immediately noticed the peculiarity with the request: all four original works (and likely their French translations as well) were old enough to have fallen into the <a href="https://en.wikipedia.org/wiki/Public_domain">public domain</a>. When we alerted the company to this point, it rescinded the takedown notice.</p>
+    <%= t('content.s_s_classic') %>
   </div>
 </div>
 
