--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -73,6 +73,12 @@
 	}
 }
 
+#where_from_graph {
+	width: 100%;
+	height: 900px;
+}
+
+
 #bar_graph_by_country {
 	width: 100%;
 	height: 600px;
@@ -173,7 +179,7 @@
 	background: $lightgray;
 	width: 150px;
 	opacity: 0.99;
-	font-family: serif;
+	font-family: 'Georgia', serif;
 	font-weight: normal;
 	font-size: 12px;
 
@@ -185,7 +191,7 @@
 		border-width: 5px;
 		border-style: solid;
 		border-color: transparent $lightgray transparent transparent;
-		top: 20px;
+		top: 3px;
 		left: -10px;
 	}
 
