Fix tooltip position for bubble graph
Change-Id: I05cf840101b2e2251a386feafa3f36b80799db5f

--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -206,6 +206,9 @@
 }
 
 .bubble_tooltip {
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;         /* Opera/IE 8+ */
 	position: absolute;
 	color: $black;
 	padding: 10px;
