--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -74,8 +74,10 @@
 }
 
 #where_from_graph {
-	width: 100%;
-	height: 900px;
+	margin-left: 13px;
+	width: 750px;
+	height: 100px;
+	padding-bottom: 30px;
 }
 
 
