--- a/source/stylesheets/variables.css.scss
+++ b/source/stylesheets/variables.css.scss
@@ -1,6 +1,6 @@
 $blue: #347BFF;
 $lightblue: #F0F2F4;
-$lightgray: #ddd;
+$lightgray: #d1d1d1;
 $gray: #666;
-$black: #333;
+$black: #33425B;
 $red: #777;
