Content change in privacy doc
Change-Id: Iea93f1b8ec519d8dc4b41877231ba101de3db1e1

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -220,7 +220,7 @@ footer {
 				text-align: right;
 			}
 
-			&:first-child, &:last-child, &:nth-last-child(2){
+			&:first-child, &:last-child, &:nth-last-child(2), &:nth-last-child(3){
 				font-weight: bold;
 			}
 			&:last-child {
