--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -52,10 +52,6 @@
 				<td>56</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('privacy.information_produced') %></td>
-				<td>8</td>
-			</tr>
-			<tr>
 				<td class="indent"><%= t('privacy.informal_non_govt') %></td>
 				<td>28</td>
 			</tr>
@@ -82,6 +78,10 @@
 			<tr class="last">
 				<td class="indent"><%= t('privacy.court_orders') %></td>
 				<td>0</td>
+			</tr>
+			<tr>
+				<td><%= t('privacy.information_produced') %></td>
+				<td>8</td>
 			</tr>
 			<tr>
 				<td><%= t('privacy.user_potentially_affected') %></td>
