Bignav on index page fix
Change-Id: If544df140c85e7ea7a976c2e3444bfdc09f85228

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -14,7 +14,7 @@
 </div>
 
 <div class="col-md-4">
-	<a href="privacy/" class="story bignav">
+	<a href="privacy.html" class="story bignav">
 		<h3><%= t('home.privacy') %></h3>
 		<hr/>
 		<p>
@@ -24,7 +24,7 @@
 </div>
 
 <div class="col-md-4">
-	<a href="content/" class="story bignav">
+	<a href="content.html" class="story bignav">
 		<h3><%= t('home.content') %></h3>
 		<hr/>
 		<p>
@@ -34,7 +34,7 @@
 </div>
 
 <div class="col-md-4">
-	<a href="faq/" class="story bignav">
+	<a href="faq.html" class="story bignav">
 		<h3><%= t('home.faq') %></h3>
 		<hr/>
 		<p>
