--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -82,6 +82,20 @@
 			<div id="where_from_graph" class="bar_graph_horizontal"></div>
 		</div>
 	</div>
+
+
+	<div class="analytics">
+		<h2>Which Wikimedia projects were targeted?</h2>
+		<ul class="tabs">
+			<li><a class="targeted_takedown_tabs" id="targeted_takedown_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
+			<li><a class="active targeted_takedown_tabs" id="targeted_takedown_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
+			<li><a class="targeted_takedown_tabs" id="targeted_takedown_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
+		</ul>
+		<div class="graph">
+			<div id="targeted_takedown_graph" class="bar_graph_horizontal"></div>
+		</div>
+
+	</div>
 </div>
 <div class="clear"></div>
 <br /> <br /> <br /> <br />
