--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -80,6 +80,12 @@
 	padding-bottom: 30px;
 }
 
+#targeted_takedown_graph {
+	margin-left: -20px;
+	width: 750px;
+	height: 100px;
+	padding-bottom: 30px;
+}
 
 #bar_graph_by_country {
 	width: 100%;
@@ -118,6 +124,10 @@
 
 	rect.gray_bars {
 		fill: #D2D8E1;
+	}
+	text.targeted:hover {
+		cursor: pointer;
+		fill: $blue;
 	}
 }
 
